@@ -1,0 +1,7 @@
+#include <math.h>
+
+float
+fdimf (float x, float y)
+{
+  return  (isgreater(x, y) ? (x - y) : 0.0F);
+}
